--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,20 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/.", "dest": "/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "methods": ["GET"]
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.+)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://admin-pi-ruby.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    }
   ]
 }
