--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "rewrites": [
-    { "src": "/.", "destination": "/index.html" }
+  "routes": [
+    { "src": "/.", "dest": "/index.html" }
   ]
 }
